--- a/_posts/2019-12-22-the-us-narrative-today.html
+++ b/_posts/2019-12-22-the-us-narrative-today.html
@@ -1684,107 +1684,107 @@ stories:
   domain: http://www.dentonrc.com/
   link: https://dentonrc.com/opinion/editorials/why-is-lowering-drug-costs-a-partisan-issue/article_c3ffb780-5b8d-532d-888e-909258aad7c4.html
 images:
-- name: old-gas-pumps-oldgaspumps-blue-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-gas-pumps-oldgaspumps-blue-circuit.jpg
-- name: old-gas-pumps-oldgaspumps-ww2-color.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-gas-pumps-oldgaspumps-ww2-color.jpg
-- name: beach-clouds-lifeguard-beachclouds-dry-skin.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-clouds-lifeguard-beachclouds-dry-skin.jpg
-- name: locked-up-steam-lock-up-steam-deep-connections.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/locked-up-steam-lock-up-steam-deep-connections.jpg
-- name: statue-of-liberty-front-view-statueofliberty-monet-one.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-of-liberty-front-view-statueofliberty-monet-one.jpg
-- name: oldhouse-granaryfield-nazi-poster.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-granaryfield-nazi-poster.jpg
-- name: locked-up-steam-lock-up-steam-colored-circuits.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/locked-up-steam-lock-up-steam-colored-circuits.jpg
-- name: old-gas-pumps-oldgaspumps-mucha-mult.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-gas-pumps-oldgaspumps-mucha-mult.jpg
-- name: subway-subway-blue-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/subway-subway-blue-circuit.jpg
-- name: nazi-invasion-IMG_7954.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-IMG_7954.jpg
-- name: oldhotel-oldhotel-crabapple.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhotel-oldhotel-crabapple.jpg
-- name: aws-s3-stories-new-old-door-lock-smoking-cigarette.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-new-old-door-lock-smoking-cigarette.jpg
-- name: castle-on-hill-castle-on-hill-edinburgh-oily-mcoilface.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-on-hill-castle-on-hill-edinburgh-oily-mcoilface.JPG
-- name: trucksilo-trucksilo-emily-carr.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/trucksilo-trucksilo-emily-carr.jpg
-- name: oldhouse-granaryfield-kandinsky-bv.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-granaryfield-kandinsky-bv.jpg
-- name: copper-circuit-construction-crane-city.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-construction-crane-city.jpg
-- name: dragon-desert-desert-dragon-monet-one.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dragon-desert-desert-dragon-monet-one.jpg
-- name: locked-up-steam-lock-up-steam-blue-brush.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/locked-up-steam-lock-up-steam-blue-brush.jpg
-- name: miamibeach-miamibeach-far-away.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/miamibeach-miamibeach-far-away.jpg
-- name: lost-angeles-downtown-freeway-los-angeles-downtow-freeway-yellow-collage.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lost-angeles-downtown-freeway-los-angeles-downtow-freeway-yellow-collage.jpg
-- name: lost-angeles-downtown-freeway-los-angeles-downtow-freeway-aqua.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lost-angeles-downtown-freeway-los-angeles-downtow-freeway-aqua.jpg
-- name: sand-hand-sand-hand-diego-rivera1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/sand-hand-sand-hand-diego-rivera1.jpg
-- name: store-on-corner-store-smooth-ride.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-store-smooth-ride.jpg
-- name: fence-mexico-alberto-giacometti.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-mexico-alberto-giacometti.jpg
-- name: rockingchair-rockingchair-blue-granite.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rockingchair-rockingchair-blue-granite.jpg
-- name: old-barn-old-barn-1500-blue-brush.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-barn-old-barn-1500-blue-brush.jpg
-- name: hollywood-building-hollywood-building-alberto-giacometti.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/hollywood-building-hollywood-building-alberto-giacometti.jpg
-- name: oldcabin-store-wols.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-store-wols.jpg
-- name: san-francisco-skyline-night-san-francisco-skyline-night-mucha-mult.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-skyline-night-san-francisco-skyline-night-mucha-mult.jpg
-- name: server-cloud-server-racks-clouds-really-hot.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-clouds-really-hot.jpg
-- name: oldtrain-oldtrain-plentiful.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldtrain-oldtrain-plentiful.jpg
-- name: yuma-bank-yuma-bak.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yuma-bank-yuma-bak.jpg
-- name: aws-s3-square-castle-on-hill-edinburgh-blue-circuit-square.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-square-castle-on-hill-edinburgh-blue-circuit-square.jpg
-- name: la-muse-nyc-streets-laundromat.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/la-muse-nyc-streets-laundromat.jpg
-- name: catacombs-catacombs-crabapple.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/catacombs-catacombs-crabapple.jpg
-- name: liberty-back-statue-liberty-back-sand-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/liberty-back-statue-liberty-back-sand-paper.jpg
-- name: status-berlin-status-berlin-cinnamon-rolls.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/status-berlin-status-berlin-cinnamon-rolls.jpg
-- name: copper-circuit-dinosaur-walking-desert.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-dinosaur-walking-desert.jpg
-- name: aws-s3-stories-ellisisland-blue-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-ellisisland-blue-circuit.jpg
-- name: copper-circuit-dark-city-buildings.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-dark-city-buildings.jpg
-- name: lincoln-memorial-lincolnmemorial-kandinsky-bv.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lincoln-memorial-lincolnmemorial-kandinsky-bv.jpg
-- name: lincoln-memorial-lincolnmemorial-space-pizza.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lincoln-memorial-lincolnmemorial-space-pizza.jpg
-- name: powerlines-power-marcel-duchamp.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/powerlines-power-marcel-duchamp.jpg
-- name: old-school-house-old-schoolhouse-yellow-collage.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-school-house-old-schoolhouse-yellow-collage.jpg
-- name: berlinwall-DSC-0084-crabapple.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall-DSC-0084-crabapple.jpg
-- name: gypsymosaic-gypsy-eyes-kandinsky-bv.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsymosaic-gypsy-eyes-kandinsky-bv.jpg
-- name: docks-docks-blue-electricity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/docks-docks-blue-electricity.jpg
-- name: redondo-beach-harbor-redondo-beach-harbor-free-woman.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/redondo-beach-harbor-redondo-beach-harbor-free-woman.jpg
-- name: rain-princess-border-fence-down-the-line-2.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rain-princess-border-fence-down-the-line-2.jpg
-- name: hollywood-building-hollywood-building-crunch-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/hollywood-building-hollywood-building-crunch-paper.jpg
-- name: birdhouse-birdhouse-crabapple.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/birdhouse-birdhouse-crabapple.jpg
+- name: rain-princess-IMG_7319.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rain-princess-IMG_7319.jpg
+- name: rain-princess-capital_36728421355_o.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rain-princess-capital_36728421355_o.jpg
+- name: bf-skinner-satellite-dish-pointing-upwards.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-satellite-dish-pointing-upwards.jpg
+- name: sand-hand-sand-hand-horiz-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/sand-hand-sand-hand-horiz-circuit.jpg
+- name: berlinwall2-berlinwall-yellow-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall2-berlinwall-yellow-paper.jpg
+- name: beach-rocks-beach-rocks-currents-blue-circuit-4.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-rocks-beach-rocks-currents-blue-circuit-4.jpg
+- name: cargo-ship-cargo-ship-on-sea-gred-mash.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cargo-ship-cargo-ship-on-sea-gred-mash.jpg
+- name: capital-battle-capitolbattle-atari-missle.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/capital-battle-capitolbattle-atari-missle.jpg
+- name: old-granary-field-oldhouse-sand-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-oldhouse-sand-paper.jpg
+- name: crow_spagetti_accident.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow_spagetti_accident.jpg
+- name: rockingchair-rockingchair-neo-instinct.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rockingchair-rockingchair-neo-instinct.jpg
+- name: bf-skinner-old-building-seattle-clouds.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-old-building-seattle-clouds.jpg
+- name: paris-paris-matrix.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/paris-paris-matrix.jpg
+- name: soldiers-talking-34536952486-52cd6bb1d1-h-copper-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldiers-talking-34536952486-52cd6bb1d1-h-copper-circuit.jpg
+- name: rain-princess-checkpoint-charlie-mcdonalds.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rain-princess-checkpoint-charlie-mcdonalds.jpg
+- name: nazi-invasion-DSC_0036.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-DSC_0036.jpg
+- name: bordercrossing-bordercrossing-really-hot.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bordercrossing-bordercrossing-really-hot.jpg
+- name: paris-paris-satan-red.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/paris-paris-satan-red.jpg
+- name: subway-subway-post-modern.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/subway-subway-post-modern.jpg
+- name: dc-statue-dcstatue-ww2-color.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dc-statue-dcstatue-ww2-color.jpg
+- name: gypsy-wagon-gypsywagon-purp-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsy-wagon-gypsywagon-purp-paper.jpg
+- name: old-granary-field-granaryfield-internet-numbers.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-granaryfield-internet-numbers.jpg
+- name: dc-statue-dcstatue-gred-mash.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dc-statue-dcstatue-gred-mash.jpg
+- name: windowmountain-window-mountain-crabapple.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/windowmountain-window-mountain-crabapple.jpg
+- name: copper-circuit-border-watching-cars.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-border-watching-cars.jpg
+- name: gypsymosaic-gypsy-eyes-ww2-dresden.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsymosaic-gypsy-eyes-ww2-dresden.jpg
+- name: cargo-ship-cargo-ship-on-sea-wols.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cargo-ship-cargo-ship-on-sea-wols.jpg
+- name: old-door-lock-old-door-lock-copper-circuit-2.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-copper-circuit-2.jpg
+- name: legal-statue-legalstatue-marcel-duchamp.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/legal-statue-legalstatue-marcel-duchamp.jpg
+- name: server-cloud-server-racks-door-purp-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-door-purp-paper.jpg
+- name: store-on-corner-store-gred-mash.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-store-gred-mash.jpg
+- name: store-on-corner-oldcabin-monet-one.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-oldcabin-monet-one.jpg
+- name: old-door-lock-old-door-lock-2-cinnamon-rolls.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-2-cinnamon-rolls.jpg
+- name: bf-skinner-cannon_36556797762_o.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-cannon_36556797762_o.jpg
+- name: powerlines-power-blue-granite.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/powerlines-power-blue-granite.jpg
+- name: dragon-desert-desert-dragon-china-prop.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dragon-desert-desert-dragon-china-prop.jpg
+- name: liberty-back-statue-liberty-back-gred-mash.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/liberty-back-statue-liberty-back-gred-mash.jpg
+- name: lincoln-memorial-lincolnmemorial-colorful-dream.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lincoln-memorial-lincolnmemorial-colorful-dream.jpg
+- name: nazi-invasion-old-train-on-tracks.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-old-train-on-tracks.jpg
+- name: udnie-P6210065.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/udnie-P6210065.jpg
+- name: statue-of-liberty-front-view-statueofliberty-light-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-of-liberty-front-view-statueofliberty-light-dali.jpg
+- name: copper-circuit-face-eyes-open-statue.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-face-eyes-open-statue.jpg
+- name: bluelake-far-away-file-00-00-00-00.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bluelake-far-away-file-00-00-00-00.jpg
+- name: los-angeles-from-observatory-losangeles-from-observatory-umberto-bocc.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/los-angeles-from-observatory-losangeles-from-observatory-umberto-bocc.jpg
+- name: statue-face-open-mouth-statue-face-open-mouth-colorful-blocks.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-face-open-mouth-statue-face-open-mouth-colorful-blocks.png
+- name: supreme-court-supremecourt-sand-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/supreme-court-supremecourt-sand-paper.jpg
+- name: oldcabin-oldcabin-satan-red.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-oldcabin-satan-red.jpg
+- name: power-lines-power-lines-empty-space-matrix.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/power-lines-power-lines-empty-space-matrix.jpg
+- name: old-school-house-old-schoolhouse-smoking-cigarette.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-school-house-old-schoolhouse-smoking-cigarette.jpg
+- name: downtown-trucksilo-smooth-ride.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-trucksilo-smooth-ride.jpg
+- name: trucksilo-trucksilo-atari-missle.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/trucksilo-trucksilo-atari-missle.jpg
 ---
 Sales Team Realtors Gives Back With Annual Toy Giveaway.&nbsp;Caroling In Shain Park.&nbsp;Hounds Tame Cedar Shoals To Advance To Quarterfinals.&nbsp;Harvey Family Tradition Continues.&nbsp;Times Square Characters Head To Rock Center For The Holidays.&nbsp;Banksy Recreates The Nativity In Bethlehem.&nbsp;Chanukah Celebration Set For Sunday.&nbsp;Lake Havasu City Baseball Coach Dies After Suffering Heart Attack.&nbsp;
